# unace1

./: .appveyor.yml  .cirrus.yml  .gitignore  .gitlab-ci.yml  Makefile  Makefile.in  README.md  acestruc.h  configure  configure.project  declare.h  file_id.diz  globals.c  globals.h  meson.build  mtrace.sh  os.h  portable.h  readme  readme.md  run-tests.sh  uac.c  uac.h  uac_comm.c  uac_comm.h  uac_crc.c  uac_crc.h  uac_crt.c  uac_crt.h  uac_dcpr.c  uac_dcpr.h  uac_sys.c  uac_sys.h  unace.c
.circleci/: config.yml
.github/: cirrus-ci.sh
.github/workflows/: c-cpp.yml  codeql-analysis.yml
amiga/: readme.txt  scoption  smakefil
amiga/ppc/: scoption  smakefil
lib/: w_endian.h
pc/dos/: 286.wat  dos16.bcc  dos4g.wat  pmodew.wat
pc/win/: win16.bcc  win16.wat  winnt.bcc  winnt.wat
scripts/: create_test_files.sh  functions.sh  mtrace.cfg  run-tests.cfg  run-tests.sh  test_ci.sh
src/: Makefile  Makefile.in  acestruc.h  declare.h  globals.c  globals.h  uac.c  uac.h  uac_dcpr.c  unace.c  unace.h
tests/: links.txt  mtrace.sh
unix/: gccmaked  makefile  readme.txt
wconfig/: _exec_make_dir.sh
